<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.task41.MainActivity"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_weight="40">

        <EditText
            android:id="@+id/editText_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter"
            android:inputType="phone"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"></Spinner>

        <Button
            android:id="@+id/button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showText"
            android:text="@string/show"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:visibility="visible">

        <TextView
            android:id="@+id/top_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_test" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_message"
            android:layout_marginTop="@dimen/button_top_margin"
            android:onClick="onClickShowAlert"
            android:text="@string/alert_button" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_datetime"
            android:textSize="@dimen/text_size"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_Date"
                android:layout_marginTop="@dimen/button_top_margin"
                android:text="@string/date_button"
                android:onClick="showDatePickerDialog"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_time"
                android:layout_marginTop="@dimen/button_top_margin"
                android:layout_alignBottom="@id/button_Date"
                android:layout_toRightOf="@id/button_Date"
                android:text="@string/time_button"
                android:onClick="showTimePickerDialog"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
